<resources>
    <string name="app_name">WuwenProject</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="titleName">无闻</string>
    <string name="introduce">一款实时语音交流的APP</string>
    <string name="gond">给个好评</string>
    <string name="feedback">我要反馈</string>
    <string name="help">帮助中心</string>
    <string name="regard">关于我们</string>
    <string name="settings">设置</string>
    <string name="Communicate">沟通</string>
    <string name="share">分享</string>
    <string name="send">发送邮件</string>
    <string name="voice">分贝</string>
    <string name="chat">交流</string>
    <string name="note">短信</string>
    <string name="db_max">最大</string>
    <string name="db_min">最小</string>
    <string name="db_avg">平均</string>
    <string name="start">开始检测</string>

    <string name="pref_key_iat_show">iat_show</string>

    <string name="pref_title_iat_show">显示听写界面</string>

    <string name="pref_key_translate">translate</string>
    <string name="pref_title_translate">翻译</string>

    <string name="text_begin">请开始说话…</string>
    <string name="speeder">发音人</string>
    <string name="cancel">取消</string>
    <string name="pause">暂停</string>

    <string name="text_tts_source_en">iFLYTEK is a national key software enterprise dedicated to the research of intelligent speech and language technologies, development of software and chip products, provision of speech information services, and integration of E-government systems. The intelligent speech technology of iFLYTEK, the core technology of the company, represents the top level in the world.</string>
    <string name="text_tts_source">科大讯飞作为中国最大的智能语音技术提供商，在智能语音技术领域有着长期的研究积累，并在中文语音合成、语音识别、口语评测等多项技术上拥有国际领先的成果。科大讯飞是我国唯一以语音技术为产业化方向的“国家863计划成果产业化基地”…</string>

    <string formatted="false" name="tts_toast_format">缓冲进度为%d%%，播放进度为%d%%</string>
    <string name="resume">继续</string>
    <string name="chating">交流</string>
    <string name="group">管理分组</string>
    <string name="study">学习</string>
    <string name="addName">添加</string>
    <string name="cancelName">取消</string>
    <string name="shoujianren">收件人</string>
    <string name="neiron">内容</string>
    <string name="sendnote">发送短信</string>
    <string name="clean">清空</string>

    <!-- 语言 -->
    <string-array name="language_entries">
        <item>普通话</item>
        <item>粤语</item>
        <item>英语</item>
    </string-array>

    <string-array name="language_values">
        <item>mandarin</item>
        <item>cantonese</item>
        <item>en_us</item>
    </string-array>

    <string-array name="punc_entries">
        <item>有标点</item>
        <item>无标点</item>
    </string-array>

    <string-array name="punc_values">
        <item>1</item>
        <item>0</item>
    </string-array>

    <string-array name="voicer_cloud_entries">
        <item>小燕—女青、中英、普通话</item>
        <item>小宇—男青、中英、普通话</item>
        <item>凯瑟琳—女青、英</item>
        <item>亨利—男青、英</item>
        <item>玛丽—女青、英</item>
        <item>小研—女青、中英、普通话</item>
        <item>小琪—女青、中英、普通话</item>
        <item>小峰—男青、中英、普通话</item>
        <item>小梅—女青、中英、粤语</item>
        <item>小莉—女青、中英、台湾普通话</item>
        <item>小蓉—女青、中、四川话</item>
        <item>小芸—女青、中、东北话</item>
        <item>小坤—男青、中、河南话</item>
        <item>小强—男青、中、湖南话</item>
        <item>小莹—女青、中、陕西话</item>
        <item>小新—男童、中、普通话</item>
        <item>楠楠—女童、中、普通话</item>
        <item>老孙—男老、中、普通话</item>
    </string-array>

    <string-array name="voicer_cloud_values">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>catherine</item>
        <item>henry</item>
        <item>vimary</item>
        <item>vixy</item>
        <item>xiaoqi</item>
        <item>vixf</item>
        <item>xiaomei</item>
        <item>xiaolin</item>
        <item>xiaorong</item>
        <item>xiaoqian</item>
        <item>xiaokun</item>
        <item>xiaoqiang</item>
        <item>vixying</item>
        <item>xiaoxin</item>
        <item>nannan</item>
        <item>vils</item>
    </string-array>

    <string-array name="stream_entries">
        <item>通话</item>
        <item>系统</item>
        <item>铃声</item>
        <item>音乐</item>
        <item>闹铃</item>
        <item>通知</item>
    </string-array>

    <string-array name="stream_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
