<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="@string/shoujianren" />

        <EditText
            android:id="@+id/edit_note_name"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/textView19"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:hint="请填写收件人手机号码"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/rl1"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_marginLeft="45dp"
            android:text="@string/neiron"
            android:layout_marginStart="45dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <EditText
            android:id="@+id/editText"

            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:hint="请写短信内容"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView20"
            android:layout_toEndOf="@+id/textView20" />
    </RelativeLayout>


    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:background="@mipmap/button"
        android:textColor="#000"
        android:textSize="13sp"
        android:text="@string/sendnote"
        android:layout_marginLeft="73dp"
        android:layout_marginStart="73dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/button_clean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:layout_alignTop="@+id/button3"
        android:layout_toRightOf="@+id/button3"
        android:layout_toEndOf="@+id/button3"
        android:background="@mipmap/button"
        android:textSize="13sp"
        android:textColor="#000"
        android:text="@string/clean"/>


</RelativeLayout>