<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white"
    android:orientation="vertical">



        <TextView
            android:id="@+id/text_db"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:text="40"
            android:textSize="120dp"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="126dp" />

        <TextView
            android:id="@+id/text_1"
            android:text="db"
            android:textSize="30dp"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/text_db"
            android:layout_toRightOf="@+id/text_db"
            android:layout_toEndOf="@+id/text_db" />

    <LinearLayout
        android:id="@+id/linearLayout_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/text_1"
        android:layout_toEndOf="@+id/text_1"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp">

        <LinearLayout
            android:id="@+id/line_11"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_max"
                android:text="@string/db_max"
                android:textSize="25dp"
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>



    </LinearLayout>

    <TextView
        android:id="@+id/text_max_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="40"
        android:textSize="25dp"
        android:textColor="#000"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignBottom="@+id/linearLayout_1"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_toEndOf="@+id/linearLayout_1"
        android:layout_toRightOf="@+id/linearLayout_1"
        android:text="80"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="60"
        android:textSize="25dp"
        android:textColor="#000"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout_1"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_toEndOf="@+id/linearLayout_1"
        android:layout_toRightOf="@+id/linearLayout_1"
        android:text="80"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/db_min"
        android:textColor="#000"
        android:textSize="25dp"
        android:layout_alignBottom="@+id/text_1"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_1"
        android:layout_alignLeft="@+id/linearLayout_1"
        android:layout_alignStart="@+id/linearLayout_1"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:text="@string/db_avg"
        android:textColor="#000"
        android:textSize="25dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:background="@color/text_green"
        android:layout_below="@+id/text_db"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_db"
        android:layout_alignStart="@+id/text_db"
        android:layout_below="@+id/button"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="31dp"
        android:textColor="#000"
        android:text="0-20db 极静 几乎感觉不到" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="18dp"
        android:textColor="#000"
        android:text="0-20db 极静 几乎感觉不到" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:layout_below="@+id/textView9"
        android:layout_marginTop="18dp"
        android:textColor="#000"
        android:text="0-20db 极静 几乎感觉不到" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignStart="@+id/textView10"
        android:layout_below="@+id/textView10"
        android:layout_marginTop="18dp"
        android:textColor="#000"
        android:text="0-20db 极静 几乎感觉不到" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11"
        android:layout_below="@+id/textView11"
        android:layout_marginTop="18dp"
        android:textColor="#000"
        android:text="0-20db 极静 几乎感觉不到" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView12"
        android:layout_alignStart="@+id/textView12"
        android:layout_below="@+id/textView12"
        android:layout_marginTop="18dp"
        android:textColor="#000"
        android:text="0-20db 极静 几乎感觉不到" />


</RelativeLayout>